[metadata]
name = galaxydock_dl
version = 0.1.0
url = https://github.com/seoklab/galaxydock_dl
description = GalaxyDock-DL: Protein-Ligand Docking by Global Optimization and Neural Network Energy
author = Changsoo Lee
author_email = ccaa2013@snu.ac.kr

[options]
zip_safe = False
python_requires = >=3.7
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
gd_dl.bin = *
gd_dl.data = *
